[project]
name = "imagegen-janus-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrdict>=2.0.1",
    "numpy>=2.2.2",
    "streamlit>=1.41.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
